--- a/index.css
+++ b/index.css
@@ -1,9 +1,10 @@
 body{
     font-family: 'Open Sans', sans-serif;
-    background-image: url("fundo-alarme.gif");
-    background-size: cover;
-    background-repeat: no-repeat;
+    background: linear-gradient(#0603b3, #5a63c4);
     text-align: center;
+    height: 75vh;
+    width: 100%;
+    overflow: hidden;
 }
 h1{
     color: aliceblue;
@@ -38,7 +39,87 @@ button{
 button:hover{
     width: 200px;
 }
+.container{
+    margin: 12%;
+}
+.quadrado div{
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    background-color: transparent;
+    border: 4px solid rgba(255, 255, 255, 0.8);
+}
+.quadrado div:nth-child(1){
+    top: 12%;
+    left: 42%;
+    animation: animate 10s linear infinite;
+}
+.quadrado div:nth-child(2){
+    top: 70%;
+    left: 50%;
+    animation: animate 7s linear infinite;
+}
+.quadrado div:nth-child(3){
+    top: 17%;
+    left: 6%;
+    animation: animate 9s linear infinite;
+}
+.quadrado div:nth-child(4){
+    top: 20%;
+    left: 60%;
+    animation: animate 10s linear infinite;
+}
+.quadrado div:nth-child(5){
+    top: 67%;
+    left: 10%;
+    animation: animate 6s linear infinite;
+}
+.quadrado div:nth-child(6){
+    top: 80%;
+    left: 70%;
+    animation: animate 12s linear infinite;
+}
+.quadrado div:nth-child(7){
+    top: 60%;
+    left: 80%;
+    animation: animate 15s linear infinite;
+}
+.quadrado div:nth-child(8){
+    top: 32%;
+    left: 25%;
+    animation: animate 16s linear infinite;
+}
+.quadrado div:nth-child(9){
+    top: 90%;
+    left: 25%;
+    animation: animate 9s linear infinite;
+}
+.quadrado div:nth-child(10){
+    top: 20%;
+    left: 80%;
+    animation: animate 5s linear infinite;
+}
+.quadrado div:nth-child(11){
+    top: 85%;
+    left: 90%;
+    animation: animate 5s linear infinite;
+}
+.quadrado div:nth-child(12){
+    top: 40%;
+    left: 8%;
+    animation: animate 5s linear infinite;
+}
 
+@keyframes animate{
+    0%{
+        transform: scale(0) translateY(0) rotate(0);
+        opacity: 1;
+    }
+    100%{
+        transform: scale(1.3) translateY(-90px) rotate(360deg);
+        opacity: 0;
+    }   
+}
 @media screen and (max-width: 800px){
     body{
         height: 100vh;
